# WorldCupBracket

./: .gitignore  Cargo.toml  README.md
data/: annex_c.json  teams.json
src/: app.rs  bracket.rs  flags.rs  icon.rs  lib.rs  live.rs  main.rs  print.rs  saves.rs  settings.rs  standings.rs  theme.rs  tutorial.rs
src/live/: mod.rs  rank.rs  scenarios.rs  sources.rs  sync.rs  ui.rs
