[package]
name = "wc26_bracket"
version = "0.1.0"
edition = "2024"
description = "Desktop app for building the FIFA World Cup 2026 knockout bracket."
authors = ["Edwin"]
license = "MIT"
readme = "README.md"
exclude = [
    "data/FWC26_regulations_AnnexC.pdf",
    "data/annex_c_extracted.txt",
    "data/match_occurrences.txt",
]

[lib]
name = "fifa_team3"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
dirs = "6.0.0"
eframe = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3.3.0", features = ["json"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
